doc2vec and dtm ready to run

--- a/notebooks/doc2vec-IMDB.ipynb
+++ b/notebooks/doc2vec-IMDB.ipynb
@@ -26,17 +26,19 @@
     "\n",
     "alldocs = []  # will hold all docs in original order\n",
     "with open('../data/c_twitter.json') as f_in:\n",
-    "    for line_no, line in enumerate(f_in):\n",
+    "    for line in f_in:\n",
     "        c_twt = json.loads(line)\n",
     "        # c_twt: {'weeknum': str, 'c_text': str, 'tags': [str]}\n",
     "        words = c_twt['c_text'].split()\n",
-    "        tags = [line_no] + c_twt['tags']\n",
-    "        alldocs.append(Document(words, tags))\n"
+    "        tags = [c_twt['index']] + c_twt['tags']\n",
+    "        alldocs.append(Document(words, tags))\n",
+    "        \n",
+    "shuffle_docs = alldocs[:]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -83,39 +85,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 [('Rohee', 0.3792356848716736), ('Depression', 0.3428954482078552), ('faster', 0.3342413008213043), ('Physique', 0.3262198567390442), ('bar', 0.32260438799858093), ('Then', 0.3182671070098877), ('authorities', 0.2946339547634125), ('Nail', 0.29241546988487244), ('What', 0.29190850257873535), ('marcorubio', 0.281993567943573)]\n",
-      "0 [('Rohee', 0.3792356848716736), ('Depression', 0.3428954482078552), ('faster', 0.3342413008213043), ('Physique', 0.3262198567390442), ('bar', 0.32260438799858093), ('Then', 0.3182671070098877), ('authorities', 0.2946339547634125), ('Nail', 0.29241546988487244), ('What', 0.29190850257873535), ('marcorubio', 0.281993567943573)]\n",
-      "0 [('rabies', 0.7693924903869629), ('syphilis', 0.7592687606811523), ('HIV', 0.7498745918273926), ('chlamydia', 0.7451803088188171), ('gonorrhea', 0.7100059986114502), ('pneumonia', 0.7098624110221863), ('meningitis', 0.704206645488739), ('mumps', 0.6963428258895874), ('Hiv', 0.6765322089195251), ('coldflu', 0.6507717967033386)]\n",
-      "1 [('Rohee', 0.3792356848716736), ('Depression', 0.3428954482078552), ('faster', 0.3342413008213043), ('Physique', 0.3262198567390442), ('bar', 0.32260438799858093), ('Then', 0.3182671070098877), ('authorities', 0.2946339547634125), ('Nail', 0.29241546988487244), ('What', 0.29190850257873535), ('marcorubio', 0.281993567943573)]\n",
-      "1 [('Rohee', 0.3792356848716736), ('Depression', 0.3428954482078552), ('faster', 0.3342413008213043), ('Physique', 0.3262198567390442), ('bar', 0.32260438799858093), ('Then', 0.3182671070098877), ('authorities', 0.2946339547634125), ('Nail', 0.29241546988487244), ('What', 0.29190850257873535), ('marcorubio', 0.281993567943573)]\n",
-      "1 [('HIV', 0.7908024787902832), ('syphilis', 0.7528500556945801), ('rabies', 0.7231859564781189), ('chlamydia', 0.667281448841095), ('mumps', 0.6658134460449219), ('pneumonia', 0.6550586223602295), ('gonorrhea', 0.6370463371276855), ('Hiv', 0.635453999042511), ('meningitis', 0.6336395740509033), ('dengue', 0.6110838651657104)]\n",
-      "2 [('Rohee', 0.3792356848716736), ('Depression', 0.3428954482078552), ('faster', 0.3342413008213043), ('Physique', 0.3262198567390442), ('bar', 0.32260438799858093), ('Then', 0.3182671070098877), ('authorities', 0.2946339547634125), ('Nail', 0.29241546988487244), ('What', 0.29190850257873535), ('marcorubio', 0.281993567943573)]\n",
-      "2 [('Rohee', 0.3792356848716736), ('Depression', 0.3428954482078552), ('faster', 0.3342413008213043), ('Physique', 0.3262198567390442), ('bar', 0.32260438799858093), ('Then', 0.3182671070098877), ('authorities', 0.2946339547634125), ('Nail', 0.29241546988487244), ('What', 0.29190850257873535), ('marcorubio', 0.281993567943573)]\n",
-      "2 [('HIV', 0.8203335404396057), ('syphilis', 0.7421900033950806), ('rabies', 0.6875845193862915), ('chlamydia', 0.6597827672958374), ('dengue', 0.6574569344520569), ('HIVAIDS', 0.6416150331497192), ('Hiv', 0.6272052526473999), ('pneumonia', 0.6148215532302856), ('meningitis', 0.610325276851654), ('mumps', 0.6047994494438171)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "passes = 3\n",
+    "from random import shuffle\n",
+    "\n",
+    "passes = 10\n",
     "\n",
     "for epoch in range(passes):\n",
+    "    shuffle(shuffle_docs)\n",
     "    for model in simple_models:\n",
-    "        model.train(alldocs)\n",
-    "        print(epoch, model.most_similar('hiv', topn=10))"
+    "        model.train(shuffle_docs)\n",
+    "        print(epoch, model.most_similar('hiv', topn=10))\n",
+    "        print(\"---similarity score (should increase)\",\n",
+    "              (model.n_similarity('hiv', 'Hiv') - model.n_similarity('hiv', 'carrots'))\n",
+    "              )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
