--- a/notebooks/dtm_example.ipynb
+++ b/notebooks/dtm_example.ipynb
@@ -33,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 5066, 2751, 4442, 10198, 2020, 686, 2169, 9233, 5368, 2684, 1240, 4135, 3189, 5532, 4565, 99]\n"
+      "[2, 103272, 56210, 90675, 209467, 41446, 14002, 43918, 188631, 109273, 54007, 25103, 84203, 52225]\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
