--- a/notebooks/doc2vec-IMDB.ipynb
+++ b/notebooks/doc2vec-IMDB.ipynb
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -586,6 +586,14 @@
      "output_type": "stream",
      "text": [
       "PCA explained variance ratio:  [ 0.07594191  0.05806724]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/high_spd_work/sm_w2v/venv/lib/python3.4/site-packages/matplotlib/pyplot.py:516: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  max_open_warning, RuntimeWarning)\n"
      ]
     }
    ],
@@ -629,7 +637,7 @@
     "pca_comps = pca.transform(X)\n",
     "\n",
     "# Do tSNE\n",
-    "tsne = TSNE(n_components=2)\n",
+    "tsne = TSNE(n_components=2, random_state=1)\n",
     "tsne_comps = tsne.fit_transform(X)\n",
     "\n",
     "# Scatter plot\n",
@@ -642,12 +650,12 @@
     "# save PCA plot in 'notebooks' directory\n",
     "scatter_plot(pca_comps[:,0], pca_comps[:,1], alpha_high, alpha_low,\n",
     "            kmeans_labels, text_annotations,\n",
-    "            down_samp_rate, \"Fig3a: PCA of Related Words.pdf\", rand_seed, plot_lims)\n",
+    "            down_samp_rate, \"Fig3a: PCA of Related Words\", rand_seed, [-5,10,-20,10])\n",
     "\n",
     "# save tSNE plot in 'notebooks' directory\n",
     "scatter_plot(tsne_comps[:,0], tsne_comps[:,1], alpha_high, alpha_low,\n",
     "            kmeans_labels, text_annotations,\n",
-    "            down_samp_rate, \"Fig3b: tSNE of Related Words.pdf\", rand_seed, plot_lims)"
+    "            down_samp_rate, \"Fig3b: tSNE of Related Words\", rand_seed, [-15,3,-8,15])"
    ]
   },
   {
@@ -1094,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -1104,6 +1112,14 @@
      "output_type": "stream",
      "text": [
       "PCA explained variance ratio:  [ 0.05724305  0.03899559]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/high_spd_work/sm_w2v/venv/lib/python3.4/site-packages/matplotlib/pyplot.py:516: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  max_open_warning, RuntimeWarning)\n"
      ]
     }
    ],
@@ -1137,7 +1153,7 @@
     "pca_comps = pca.transform(X)\n",
     "\n",
     "# Do tSNE\n",
-    "tsne = TSNE(n_components=2)\n",
+    "tsne = TSNE(n_components=2, random_state=1)\n",
     "tsne_comps = tsne.fit_transform(X)\n",
     "\n",
     "# Scatter plot\n",
@@ -1150,12 +1166,12 @@
     "# save PCA plot in 'notebooks' directory (it won't show here in the notebook)\n",
     "scatter_plot(pca_comps[:,0], pca_comps[:,1], alpha_high, alpha_low,\n",
     "            kmeans_labels, text_annotations,\n",
-    "            down_samp_rate, \"Fig4a: PCA of Related Hashtags-Users-Tweets.pdf\", rand_seed, plot_lims)\n",
+    "            down_samp_rate, \"Fig4a: PCA of Related Hashtags-Users-Tweets\", rand_seed, [0,25,-7,3])\n",
     "\n",
     "# save tSNE plot in 'notebooks' directory (it won't show here in the notebook)\n",
     "scatter_plot(tsne_comps[:,0], tsne_comps[:,1], alpha_high, alpha_low,\n",
     "            kmeans_labels, text_annotations,\n",
-    "            down_samp_rate, \"Fig4b: tSNE of Hashtags-Users-Tweets.pdf\", rand_seed, plot_lims)"
+    "            down_samp_rate, \"Fig4b: tSNE of Hashtags-Users-Tweets\", rand_seed, [-10,5,-8,12])"
    ]
   },
   {
