filter to get quality tweets (see utils.relevant_twt(), and also some other changes

--- a/notebooks/doc2vec-IMDB.ipynb
+++ b/notebooks/doc2vec-IMDB.ipynb
@@ -23,6 +23,9 @@
     "\n",
     "import gensim\n",
     "\n",
+    "# script author (me) defined stop words\n",
+    "STOPWORDS_ = ['re', '-', '']\n",
+    "\n",
     "Document = namedtuple('Document', 'words tags')\n",
     "\n",
     "alldocs = []  # will hold all docs in original order\n",
@@ -31,6 +34,7 @@
     "        c_twt = json.loads(line)\n",
     "        # c_twt: {'weeknum': str, 'c_text': str, 'tags': [str]}\n",
     "        words = c_twt['c_text'].split()\n",
+    "        words = [w for w in words if w not in STOPWORDS_]\n",
     "        tags = [i] + c_twt['tags']\n",
     "        alldocs.append(Document(words, tags))\n",
     "        \n",
