--- a/notebooks/dtm_example.ipynb
+++ b/notebooks/dtm_example.ipynb
@@ -46,6 +46,9 @@
     "\n",
     "from gensim.parsing.preprocessing import STOPWORDS\n",
     "\n",
+    "# script author (me) defined stop words\n",
+    "STOPWORDS_ = ['re', '-', '']\n",
+    "\n",
     "# load the tweets\n",
     "documents = []\n",
     "time_seq = []\n",
@@ -57,7 +60,7 @@
     "        # remove punctuation and stopwords for this analysis\n",
     "        c_twt['c_text'] = re.sub('[\\.,#?!]', '', c_twt['c_text'])\n",
     "        words = c_twt['c_text'].split()\n",
-    "        words = [w for w in words if w not in STOPWORDS]\n",
+    "        words = [w for w in words if (w not in STOPWORDS and w not in STOPWORDS_)]\n",
     "        words = [bytes(w, 'utf-8') for w in words]\n",
     "        \n",
     "        # c_twt: {'weeknum': str, 'c_text': str, 'tags': [str]}\n",
