fix bug: hardcoded path

--- a/notebooks/Topic_modeling_on_user-timelines.ipynb
+++ b/notebooks/Topic_modeling_on_user-timelines.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Identify 1000 users and download timelines\n",
@@ -26,8 +18,8 @@
     "from tweepy.parsers import JSONParser\n",
     "\n",
     "import sys\n",
-    "if not('/high_spd_work/sm_w2v' in sys.path):\n",
-    "    sys.path.append('/high_spd_work/sm_w2v')\n",
+    "if not('../' in sys.path):\n",
+    "    sys.path.append('../')\n",
     "\n",
     "from sm_w2v.tokens import CONSUMER_KEY, CONSUMER_SECRET, TOKEN_KEY, TOKEN_SECRET\n",
     "\n",
