do preliminary analysis on user-timelines, do classification on tweet sentiments to find negative PrEP tweets

--- a/notebooks/doc2vec.ipynb
+++ b/notebooks/doc2vec.ipynb
@@ -23,8 +23,7 @@
     "\n",
     "import gensim\n",
     "\n",
-    "# script author (me) defined stop words\n",
-    "STOPWORDS_ = ['re', '-', '', 'httpst']\n",
+    "# not removing stopwords now, and doesn't seem to be a problem now\n",
     "\n",
     "Document = namedtuple('Document', 'words tags')\n",
     "\n",
@@ -34,23 +33,11 @@
     "        c_twt = json.loads(line)\n",
     "        # c_twt: {'weeknum': str, 'c_text': str, 'tags': [str]}\n",
     "        words = c_twt['text'].split()\n",
-    "        words = [w for w in words if w not in STOPWORDS_]\n",
     "        tags = [str(c_twt['id'])] + c_twt['tags']\n",
     "        alldocs.append(Document(words, tags))\n",
     "        \n",
-    "shuffle_docs = alldocs[:]\n",
-    "\n",
-    "\n"
+    "shuffle_docs = alldocs[:]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -98,6 +85,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Build model and train (or load model from file)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -105,87 +99,56 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "# import multiprocessing\n",
+    "import multiprocessing\n",
+    "from random import shuffle\n",
+    "import random\n",
+    "import time\n",
     "\n",
     "from gensim.models import Doc2Vec\n",
-    "# import gensim.models.doc2vec\n",
+    "import gensim.models.doc2vec\n",
     "\n",
-    "\n",
-    "# cores = multiprocessing.cpu_count()\n",
-    "# assert gensim.models.doc2vec.FAST_VERSION > -1, \"this will be painfully slow otherwise\"\n",
-    "\n",
-    "# # PV-DM w/average\n",
-    "# model= Doc2Vec(dm=1, dm_mean=1, size=100, window=3, negative=5, hs=0, min_count=2, workers=cores,\n",
-    "#            max_vocab_size=10000, seed=1)\n",
-    "\n",
-    "\n",
-    "# # the array is too big\n",
-    "# model.build_vocab(alldocs)\n",
-    "# print(model)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Performance of Doc2Vec training could be a figure??"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# from random import shuffle\n",
-    "# import random\n",
-    "# import time\n",
     "import numpy as np\n",
     "\n",
-    "# random.seed(1)\n",
-    "# np.random.seed(1)\n",
+    "random.seed(1)\n",
+    "np.random.seed(1)\n",
     "\n",
-    "# passes = 10\n",
-    "# start_time = time.time()\n",
+    "train = False\n",
     "\n",
-    "# for epoch in range(passes):\n",
-    "#     shuffle(shuffle_docs)\n",
-    "#     model.train(shuffle_docs)\n",
-    "#     print(epoch, model.most_similar('hiv', topn=10))\n",
-    "    \n",
-    "#     # do some validation after each epoch\n",
-    "#     doc_ids = random.sample(range(len(alldocs)), 1000)\n",
-    "#     score = 0\n",
-    "#     for doc_id in doc_ids:\n",
-    "#         inferred_docvec = model.infer_vector(alldocs[doc_id].words)\n",
-    "#         score += sum(abs(model.docvecs[doc_id] - inferred_docvec))\n",
-    "#     print(\"--- score: \", score)\n",
-    "#     print(\"ELAPSED TIME (seconds): \", time.time() - start_time)"
+    "if train:\n",
+    "    cores = multiprocessing.cpu_count()\n",
+    "    assert gensim.models.doc2vec.FAST_VERSION > -1, \"this will be painfully slow otherwise\"\n",
+    "\n",
+    "    # PV-DM w/average\n",
+    "    model= Doc2Vec(dm=1, dm_mean=1, size=100, window=3, negative=5, hs=0, min_count=2, workers=cores,\n",
+    "               max_vocab_size=10000, seed=1)\n",
+    "\n",
+    "\n",
+    "    # the array is too big\n",
+    "    model.build_vocab(alldocs)\n",
+    "    print(\"model:\", model)\n",
+    "\n",
+    "    # train model\n",
+    "    passes = 10\n",
+    "    start_time = time.time()\n",
+    "\n",
+    "    for epoch in range(passes):\n",
+    "        shuffle(shuffle_docs)\n",
+    "        model.train(shuffle_docs)\n",
+    "        print(epoch, model.most_similar('hiv', topn=10))\n",
+    "\n",
+    "        # do some validation after each epoch\n",
+    "        doc_ids = random.sample(range(len(alldocs)), 1000)\n",
+    "        score = 0\n",
+    "        for doc_id in doc_ids:\n",
+    "            inferred_docvec = model.infer_vector(alldocs[doc_id].words)\n",
+    "            score += sum(abs(model.docvecs[doc_id] - inferred_docvec))\n",
+    "        print(\"--- score: \", score)\n",
+    "        print(\"ELAPSED TIME (seconds): \", time.time() - start_time)\n",
+    "\n",
+    "    model.save('../models/doc2vec.model')\n",
+    "else:\n",
+    "    model = Doc2Vec.load('../models/doc2vec.model')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# model.save('../models/doc2vec.model')\n",
-    "model = Doc2Vec.load('../models/doc2vec.model')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1217,25 +1180,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# do visualization/clustering of users\n",
-    "# do visualization/clustering of hashtags\n",
-    "# do visualization/clustering of documents"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# get ~24,000 users related to PrEP sorted\n",
     "\n",
-    "and store in '../data/top_users_to_PrEP.txt'"
+    "and store in '../data/top_users_to_PrEP.txt'\n",
+    "\n",
+    "\n",
+    "this is providing data for other notebook:\n",
+    "\n",
+    "`topic_modeling_on_user-timelines.ipynb`\n",
+    "\n",
+    "and was only run once:\n",
+    "\n"
    ]
   },
   {
