--- a/notebooks/dtm_example.ipynb
+++ b/notebooks/dtm_example.ipynb
@@ -46,8 +46,8 @@
     "\n",
     "from gensim.parsing.preprocessing import STOPWORDS\n",
     "\n",
-    "# script author (me) defined stop words\n",
-    "STOPWORDS_ = ['rt', '-', '', 'httpst', 'amp']\n",
+    "# script author defined stop words\n",
+    "STOPWORDS_ = ['rt', '', 'httpst', 'amp']\n",
     "\n",
     "# load the tweets\n",
     "documents = []\n",
@@ -58,7 +58,7 @@
     "        c_twt = json.loads(l)\n",
     "        \n",
     "        # remove punctuation and stopwords for this analysis\n",
-    "        words = re.sub('[\\.,#?!]', '', c_twt['text'])\n",
+    "        words = re.sub(r'[^a-zA-Z]', '', c_twt['text'])\n",
     "        words = words.split()\n",
     "        words = [w for w in words if (w not in STOPWORDS and w not in STOPWORDS_)]\n",
     "        words = [bytes(w, 'utf-8') for w in words]\n",
@@ -101,6 +101,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train model (or load model from file)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -109,21 +116,15 @@
    },
    "outputs": [],
    "source": [
-    "dtm_binary_path = '/high_spd_work/sm_w2v/tools/dtm/dtm/dtm'\n",
-    "model = DtmModel(dtm_binary_path, corpus, time_seq, num_topics=10,\n",
-    "                 id2word=corpus.dictionary, initialize_lda=True, rng_seed=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "model.save('../models/dtm_example.model')\n",
-    "# model = DtmModel.load('../models/doc2vec.model')"
+    "train = False\n",
+    "\n",
+    "if train:\n",
+    "    dtm_binary_path = '/high_spd_work/sm_w2v/tools/dtm/dtm/dtm'\n",
+    "    model = DtmModel(dtm_binary_path, corpus, time_seq, num_topics=10,\n",
+    "                     id2word=corpus.dictionary, initialize_lda=True, rng_seed=0)\n",
+    "    model.save('../models/dtm_example.model')\n",
+    "else:\n",
+    "    model = DtmModel.load('../models/doc2vec.model')"
    ]
   },
   {
