add tf-idf preproccessing and fix duplicate tweets

--- a/notebooks/Sentiment_Analysis.ipynb
+++ b/notebooks/Sentiment_Analysis.ipynb
@@ -23,6 +23,8 @@
     "\n",
     "import gensim\n",
     "\n",
+    "train = False\n",
+    "\n",
     "def clean_text(text):\n",
     "    clean = re.sub(r'http.*$', '', text)\n",
     "    clean = re.sub(r'[^a-zA-Z,\\.?\\'#0-9\\s\\-_]', '', clean)\n",
@@ -134,7 +136,7 @@
     "import numpy as np\n",
     "\n",
     "def fit_model_eval_accuracy(X, y, eval_X, eval_y):\n",
-    "    model = LogisticRegression()\n",
+    "    model = LogisticRegression(random_state=1)\n",
     "    model.fit(X, y)\n",
     "    \n",
     "    mean_accuracy = model.score(eval_X, eval_y)\n",
@@ -189,30 +191,37 @@
     "\n",
     "passes = 3\n",
     "\n",
-    "for epoch in range(passes):\n",
-    "    \n",
-    "    # train doc vectors\n",
-    "    shuffle(shuffledocs)\n",
-    "    model.train(shuffledocs)\n",
     "\n",
-    "    # train lr model\n",
-    "    X = np.zeros((len(train_docs), 100))\n",
-    "    y = np.zeros(len(train_docs))\n",
-    "    for i, doc in enumerate(train_docs):\n",
-    "        doc_id_str = doc[1][0]\n",
-    "        X[i,] = model.docvecs[doc_id_str]\n",
-    "        y[i] = int(doc[3])\n",
-    "    \n",
-    "    # validate lr model\n",
-    "    X_eval = np.zeros((len(valid_docs), 100))\n",
-    "    y_eval = np.zeros(len(valid_docs))\n",
-    "    for i, doc in enumerate(valid_docs):\n",
-    "        doc_id_str = doc[1][0]\n",
-    "        X_eval[i,] = model.docvecs[doc_id_str]\n",
-    "        y_eval[i] = int(doc[3])\n",
-    "    \n",
-    "    lr_model, mean_accuracy = fit_model_eval_accuracy(X, y, X_eval, y_eval)\n",
-    "    print('epoch:', epoch, 'mean accuracy:', mean_accuracy)"
+    "if train:\n",
+    "    for epoch in range(passes):\n",
+    "\n",
+    "        # train doc vectors\n",
+    "        shuffle(shuffledocs)\n",
+    "        model.train(shuffledocs)\n",
+    "\n",
+    "        # train lr model\n",
+    "        X = np.zeros((len(train_docs), 100))\n",
+    "        y = np.zeros(len(train_docs))\n",
+    "        for i, doc in enumerate(train_docs):\n",
+    "            doc_id_str = doc[1][0]\n",
+    "            X[i,] = model.docvecs[doc_id_str]\n",
+    "            y[i] = int(doc[3])\n",
+    "\n",
+    "        # validate lr model\n",
+    "        X_eval = np.zeros((len(valid_docs), 100))\n",
+    "        y_eval = np.zeros(len(valid_docs))\n",
+    "        for i, doc in enumerate(valid_docs):\n",
+    "            doc_id_str = doc[1][0]\n",
+    "            X_eval[i,] = model.docvecs[doc_id_str]\n",
+    "            y_eval[i] = int(doc[3])\n",
+    "\n",
+    "        lr_model, mean_accuracy = fit_model_eval_accuracy(X, y, X_eval, y_eval)\n",
+    "        print('epoch:', epoch, 'mean accuracy:', mean_accuracy)\n",
+    "        \n",
+    "        model.save('../models/sentiment_analysis.model')\n",
+    "\n",
+    "else:\n",
+    "    Doc2Vec.load('../models/sentiment_analysis.model')"
    ]
   },
   {
