--- a/notebooks/Topic_modeling_on_user-timelines.ipynb
+++ b/notebooks/Topic_modeling_on_user-timelines.ipynb
@@ -6,10 +6,10 @@
     "collapsed": false
    },
    "source": [
-    "# Download user timelines\n",
+    "# Analysis on user timelines\n",
     "To see how these user-timelines were downloaded, see:\n",
     "\n",
-    "`sm_w2v.__main__.run_uer_timeline_download()`\n",
+    "`sm_w2v.__main__.run_user_timeline_download()`\n",
     "\n",
     "Data were downloaded to:\n",
     "\n",
@@ -27,7 +27,7 @@
     "# load and concatenate tweet timeline-documents\n",
     "import json\n",
     "\n",
-    "train = False\n",
+    "train = True\n",
     "\n",
     "user_timelines = dict()\n",
     "with open('../data/user_timeline_tweets.json') as f_in:\n",
